--- a/00.Simulation.html
+++ b/00.Simulation.html
@@ -128,6 +128,8 @@ $(document).ready(function () {
 </div>
 <div id="section-simulation-of-a-coin-toss" class="section level2">
 <h2>Simulation of a coin toss</h2>
+<div id="section-exercise-1" class="section level3">
+<h3>Exercise 1</h3>
 <p>Simulate a ten coin tosses (<span class="math inline">\(n=10\)</span>) using R function <code>sample(_____)</code> and probability of getting head <span class="math inline">\(p\)</span>. Use a seed for random number generator so your simulation is reproducible:</p>
 <div class="tutorial-exercise" data-label="simulation_coin_toss" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>n &lt;- 10
@@ -149,6 +151,9 @@ p &lt;- 0.5
 coin_toss &lt;- sample(x=c(&quot;H&quot;,&quot;T&quot;),size=n, replace=T, prob=c(p,1-p))
 coin_toss</code></pre>
 </div>
+</div>
+<div id="section-exercise-2" class="section level3">
+<h3>Exercise 2</h3>
 <p>Simulate directly the number of heads (<span class="math inline">\(h&#39;\)</span>) using <code>rbinom(_____)</code>:</p>
 <div class="tutorial-exercise" data-label="simulation_coin_toss_rbinom" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>n &lt;- 10
@@ -166,11 +171,14 @@ h_prime &lt;- rbinom(n=num_of_sim,size=n,prob=p)
 h_prime</code></pre>
 </div>
 </div>
+</div>
 <div id="section-simulation-of-population-genetic-data" class="section level2">
 <h2>Simulation of population genetic data</h2>
 <p>Simulation via the coalescent. For convenience, we will use the R package <code>phyclust</code> that includes a version of coalescent simulator ms in this tutorial. In practice, use of other simulators (msprime, fastsimcoal or the original implementation of ms) is recommended.</p>
 <pre class="r"><code>library(&quot;phyclust&quot;, quietly=T)</code></pre>
-<p>Simulate with <code>ms(_____)</code> a sample of <span class="math inline">\(n=10\)</span> mitochondrial DNA sequences of <span class="math inline">\(l=10000\)</span>bp in a population of size <span class="math inline">\(N=10000\)</span> with mutation rate (per bp) <span class="math inline">\(\mu=10^{-8}\)</span>:</p>
+<div id="section-exercise-3" class="section level3">
+<h3>Exercise 3</h3>
+<p>Simulate with <code>ms(_____)</code> a sample of <span class="math inline">\(n=10\)</span> individuals sequenced for a mitochondrial DNA locus of lenght <span class="math inline">\(l=10000\)</span>bp in a population of size <span class="math inline">\(N=10000\)</span> with mutation rate (per bp) <span class="math inline">\(\mu=10^{-8}\)</span>:</p>
 <div class="tutorial-exercise" data-label="coalescent_sim" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>n&lt;-10
 l&lt;-10000
@@ -199,16 +207,19 @@ num_of_sim&lt;-1
 theta &lt;- 2*N*u*l # note that l*u is an approximation!
 ms(nsam=n,nreps=num_of_sim,opt=paste(&quot;-t&quot;,theta))</code></pre>
 </div>
-<p>Lets put this text into a more usable form (i.e. matrix of polymorphisms, etc) using a function distributed with the original software ms:</p>
-<pre class="r"><code>source(readms.output.R)</code></pre>
-<p>Use <code>read.ms.output(_____)</code> function to read ms output and print the number of segregating sites only</p>
+<p>We can put this text into a more usable form (i.e. matrix of polymorphisms, etc) using a function distributed with the original software ms:</p>
+<pre class="r"><code>source(&quot;readms.output.R&quot;, local =T)</code></pre>
+</div>
+<div id="section-exercise-4" class="section level3">
+<h3>Exercise 4</h3>
+<p>Use <code>read.ms.output(_____)</code> function to read ms output and print only the genotype matrix (i.e. <code>gametes</code>).</p>
 <div class="tutorial-exercise" data-label="coalescent_sim_segsites" data-caption="Code" data-completion="1" data-diagnostics="1" data-startover="1" data-lines="0">
 <pre class="text"><code>n&lt;-10
 l&lt;-10000
 N&lt;-10000
 u&lt;-1e-8
 num_of_sim&lt;-1
-theta &lt;- 2*N*u*l # note that l*u is an approximation!
+theta &lt;- 2*N*u*l 
 msout &lt;- ms(nsam=n,nreps=num_of_sim,opt=paste(&quot;-t&quot;,theta))
 sim_data &lt;- read.ms.output(____)
 _____</code></pre>
@@ -220,7 +231,7 @@ l&lt;-10000
 N&lt;-10000
 u&lt;-1e-8
 num_of_sim&lt;-1
-theta &lt;- 2*N*u*l # note that l*u is an approximation!
+theta &lt;- 2*N*u*l 
 msout &lt;- ms(nsam=n,nreps=num_of_sim,opt=paste(&quot;-t&quot;,theta))
 sim_data &lt;- read.ms.output(txt=msout)
 sim_data$_____</code></pre>
@@ -231,10 +242,10 @@ l&lt;-10000
 N&lt;-10000
 u&lt;-1e-8
 num_of_sim&lt;-1
-theta &lt;- 2*N*u*l # note that l*u is an approximation!
+theta &lt;- 2*N*u*l
 msout &lt;- ms(nsam=n,nreps=num_of_sim,opt=paste(&quot;-t&quot;,theta))
 sim_data &lt;- read.ms.output(txt=msout)
-sim_data$segsites</code></pre>
+sim_data$gametes</code></pre>
 </div>
 
 <script type="application/shiny-prerendered" data-context="server-start">
@@ -288,6 +299,7 @@ output$`tutorial-exercise-coalescent_sim_segsites-output` <- renderUI({
 {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["packages","version"]},"class":{"type":"character","attributes":{},"value":["data.frame"]},"row.names":{"type":"integer","attributes":{},"value":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40]}},"value":[{"type":"character","attributes":{},"value":["ape","base","compiler","datasets","digest","evaluate","graphics","grDevices","grid","htmltools","htmlwidgets","httpuv","jsonlite","knitr","later","lattice","learnr","magrittr","markdown","methods","mime","nlme","parallel","phyclust","promises","R6","Rcpp","rlang","rmarkdown","rprojroot","shiny","stats","stringi","stringr","tools","utils","withr","xfun","xtable","yaml"]},{"type":"character","attributes":{},"value":["5.3","3.6.3","3.6.3","3.6.3","0.6.27","0.14","3.6.3","3.6.3","3.6.3","0.4.0","1.5.1","1.5.2","1.7.2","1.31","1.0.0","0.20-41","0.10.1","2.0.1","1.1","3.6.3","0.10","3.1-149","3.6.3","0.1-30","1.1.0","2.5.0","1.0.6","0.4.10","2.7","2.0.2","1.3.2","3.6.3","1.5.3","1.4.0","3.6.3","3.6.3","2.4.1","0.21","1.8-4","2.2.1"]}]}]}
 </script>
 <!--/html_preserve-->
+</div>
 </div>
 
 </div> <!-- topics -->
